--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+<div class="container">
+    <div class="row"></div>
+    <div class="row"></div>
+</div>
 </body>
 </html>
