--- a/index.html
+++ b/index.html
@@ -8,8 +8,22 @@
 </head>
 <body>
 <div class="container">
-    <div class="row"></div>
-    <div class="row"></div>
+    
+    <div class="row">
+
+        <h>This is a header</h>
+
+    </div>
+    <div class="row">
+
+        <p>this is a paragraph</p>
+
+        <p>This is interesting</p>
+
+        <p>testing testing testing</p>
+        <p>testing testing testing</p>
+        <p>testing testing testing</p>
+    </div>
 </div>
 </body>
 </html>
