added two divs with class col and a footer tag with class footer

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <p>testing testing testing</p>
         <p>testing testing testing</p>
         <p>testing testing testing</p>
+
+        <div class="col-md-6">left side</div>
+        <div class="col-md-6">right side</div>
     </div>
 </div>
 </body>
